@@ -1303,5 +1303,15 @@ sharing.progress.cancel=Cancel
 wizard.maketorrents.autoopen=Open the torrent for seeding when done
 ConfigView.section.sharing.rescanenable=Enable periodic rescanning of shares for changes
 ConfigView.section.sharing.rescanperiod=Rescan period (secs)
+ConfigView.connection.group.advanced=Advanced Network Settings
+ConfigView.section.connection.advanced.mtu=Line Maximum Transmission Unit (MTU)
+ConfigView.section.connection.advanced.mtu.tooltip=Maximum size of a packet that can be transferred in one frame over a network.\nAzureus uses MTU-40 (MSS) for upload packet-payload optimizations.\nRecommended values:\n  576 - Dial-up connections\n1492 - PPPoE broadband connections\n1500 - Ethernet, DSL and Cable broadband connections 
+ConfigView.section.connection.advanced.SO_RCVBUF=Socket SO_RCVBUF size [0: use OS default]
+ConfigView.section.connection.advanced.SO_RCVBUF.tooltip=Sets the standard socket SO_RCVBUF value (in bytes), i.e. TCP receive window size and scale.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nNOTE: Linux doubles the given value.
+ConfigView.section.connection.advanced.SO_SNDBUF=Socket SO_SNDBUF size [0: use OS default]
+ConfigView.section.connection.advanced.SO_SNDBUF.tooltip=Sets the standard socket SO_SNDBUF value (in bytes), i.e. the TCP send window size.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nNOTE: Linux doubles the given value.
+ConfigView.section.connection.advanced.IPTOS=Outgoing packet type-of-service (TOS)
+ConfigView.section.connection.advanced.IPTOS.tooltip=Sets traffic class / type-of-service (TOS) field in the IP header for outgoing packets.\nAzureus leaves this unset by default, meaning the defaults for the underlying OS are used.\nExample values are:\n0x02 for IPTOS_LOWCOST\n0x04 for IPTOS_RELIABILITY\n0x08 for IPTOS_THROUGHPUT\n0x10 for IPTOS_LOWDELAY\nNOTE: Underlying network implementations may ignore this value, so this option is highly dependent on OS and JRE versions.
+
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
